// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatPanel renders without crashing when connected 1`] = `
<Fragment>
  <Connect(MessagesList)
    socket={lookup {}}
  />
</Fragment>
`;

exports[`ChatPanel renders without crashing when error is shown 1`] = `
<Fragment>
  <Connect(ErrorPanel) />
</Fragment>
`;
